# hsed

./: .gitignore  CHANGELOG.md  README.md  SPECIFICATION.md  ci-prod.hsed  pyproject.toml  signer-kms-policy.json  test.hsed
chapters/: chapter_0_book_index.yaml  chapter_1_index.yaml  section_1_01_the_problem.yaml  section_1_02_chmod_analogy.yaml  section_1_03_permission_bits.yaml  section_1_04_octal_notation.yaml  section_1_05_standard_roles.yaml  section_1_06_enforcement.yaml  section_1_07_security_principles.yaml  section_1_08_role_hierarchies.yaml  section_1_09_first_scenarios.yaml  section_1_10_mistakes.yaml
examples/audit-trail/: compliance_check.py
examples/secrets-manager/: seal_unseal.py
examples/zero-trust/: generate_policies.py
hsed/: __init__.py
hsed/cli/: main.py
hsed/integrations/: azure_keyvault.py  gcp_kms.py  live_audit.py  vault.py
templates/aws-kms/: main.tf  outputs.tf  variables.tf
templates/hashicorp-vault/: policy.hcl
templates/kubernetes/: rbac.yaml
tests/: test_integrations_v2.py
